--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "csv": "^5.4.0"
+    "csv": "^5.4.0",
+    "glob": "^7.1.6"
   }
 }
