add bin to package.json for PKG packager

--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "cb-bn-csv-normalizer",
   "version": "1.0.0",
-  "description": "",
+  "description": "Takes Coinbase trade exports and transforms them into a single Binanced-shaped csv file.",
   "main": "index.js",
+  "bin": "index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "csv": "^5.4.0"
   }
